# backend

./: .env.dev.sample  .env.prod.sample  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  REPO_REVIEW.md  compose.yaml  conftest.py  dev.yaml  digipal_text_textannotation.csv  expose_db.yml  justfile  old-database.yaml  pyproject.toml  requirements.txt  traefik.yaml
.githooks/: pre-commit
.github/workflows/: cd-backend.yml  cd-staging.yml  cd.yml  ci-tests-and-checks.yml  ci.yml  security.yml
apps/annotations/: admin.py  apps.py  models.py  schema.yaml  search.py  search_indexes.py  serializers.py  services.py  urls.py  views.py
apps/annotations/api/: admin_serializers.py  admin_urls.py  admin_views.py
apps/annotations/migrations/: 0001_initial.py  0002_graph_positions.py  0003_graph_annotation_type.py  0004_alter_graph_options.py  0005_alter_graphcomponent_unique_together_and_more.py  0006_graph_notes_and_editorial_optional_links.py  0007_graph_text_type_check_constraint.py  0008_graph_created_alter_graph_positions.py  0009_alter_graph_allograph.py
apps/annotations/tests/: factories.py  tests.py
apps/annotations_w3c/: apps.py  converters.py  urls.py  views.py
apps/annotations_w3c/tests/: test_w3c.py
apps/common/: admin.py  audit.py  celery.py  legacy_migration_audit.py  legacy_migration_importer.py  legacy_migration_procedure.py  middleware.py  mixins.py  models.py  permissions.py  schema.yaml  search.py  serializers.py  tasks.py  urls.py  views.py
apps/common/api/: admin_serializers.py  admin_urls.py  admin_views.py  base_admin_views.py  permissions.py
apps/common/migrations/: 0001_initial.py  0002_alter_date_options.py  0003_alter_date_options.py  0004_editevent.py  0005_date_probable_text_dating_notes.py  0006_remove_date_assessment_metadata.py  0007_alter_editevent_target_type.py  0008_sitelabels.py  0009_seed_sitelabels_defaults.py  0009_seed_sitelabels_from_json.py
apps/common/tests/: factories.py  test_audit.py  test_legacy_migration_audit.py  test_legacy_migration_importer.py  test_legacy_migration_procedure.py  test_request_id_middleware.py  test_schema_yaml_consistency.py  test_site_labels.py  tests.py
apps/iiif_presentation/: apps.py  content_search.py  manifest.py  urls.py  views.py
apps/iiif_presentation/tests/: test_content_search.py  test_manifest.py
apps/manuscripts/: admin.py  apps.py  iiif.py  models.py  schema.yaml  search.py  search_indexes.py  serializers.py  services.py  signals.py  urls.py  views.py  widgets.py
apps/manuscripts/api/: admin_serializers.py  admin_urls.py  admin_views.py
apps/manuscripts/migrations/: 0001_initial.py  0002_itempart_current_item_locus_itempart_custom_label.py  0003_bibliographicsource_alter_historicalitem_date_and_more.py  0004_remove_historicalitem_date_alter_itemimage_locus.py  0005_historicalitem_date.py  0006_alter_itemimage_locus.py  0007_alter_itemimage_image.py  0008_remove_historicalitem_issuer_and_more.py  0009_alter_cataloguenumber_options_and_more.py  0010_alter_currentitem_shelfmark.py  0010_alter_itemimage_content_type_and_more.py  0010_imagetext_language_imagetext_created_imagetext_modified.py  0011_alter_imagetext_status_alter_imagetext_type.py  0011_alter_itemimage_locus.py  0011_historicalitem_current_location_latitude_and_more.py  0012_alter_imagetext_status.py  0012_historicalitem_name.py  0013_alter_itemimage_content_type.py  0013_merge_20260214_0700.py  0014_alter_currentitem_shelfmark.py  0014_alter_itemimage_image.py  0015_alter_currentitem_shelfmark.py  0016_alter_bibliographicsource_options_and_more.py  0017_tagulous_itemimage_tags_itemimage_tags.py  0018_imagetext_unique_per_kind.py  0019_imagetext_review_assignee_statustransition.py  0020_imagetext_content_dpt_legacy.py  0021_historicalitemdateassessment.py  0022_alter_historicalitem_date.py  0023_itemimage_checksum_sha256_itemimage_created_and_more.py  0023_msdescarea.py  0024_merge_itemimage_metadata_msdescarea.py
apps/manuscripts/serializers/: __init__.py  management.py  public.py
apps/manuscripts/services/: __init__.py  media.py
apps/manuscripts/tests/: factories.py  test_catalogue_display.py  test_embed_annotation_ids.py  test_htr_import.py  test_item_image_file_deletion.py  test_item_image_path_field.py  tests.py  (+10 more)
apps/pages/: models.py  serializers.py  urls.py  views.py
apps/publications/: admin.py  models.py  schema.yaml  serializers.py  services.py  urls.py  views.py
apps/scribes/: admin.py  models.py  schema.yaml  search.py  search_indexes.py  serializers.py  services.py  urls.py  views.py
apps/search/: admin_service.py  apps.py  contracts.py  filter_contract.py  index_metadata.py  parsers.py  progress.py  qb_parser.py  quality_endpoints.py  registry.py  services.py  signals.py  tasks.py  text_monitoring_endpoints.py  types.py  urls.py  views.py  views_management.py  views_search.py
apps/symbols_structure/: admin.py  models.py  schema.yaml  serializers.py  services.py  urls.py  views.py
apps/uploads/: apps.py  ingest.py  models.py  schema.yaml  serializers.py  services.py  tasks.py  urls.py  views.py
apps/users/: schema.yaml  serializers.py  services.py  urls.py  views.py
apps/worksets/: apps.py  models.py  schema.yaml  serializers.py  services.py  urls.py  views.py
config/: admin.py  admin_api_urls.py  admin_views.py  asgi.py  celery.py  pagination.py  settings.py  settings_customizations.py  test.env  urls.py
docs/: database-map.md  legacy-migration-audit.md  legacy-migration-manifest-template.json  legacy-migration-operator-guide.md  legacy-migration-plan.md  postgresql-18-upgrade.md  release-runtime-operations.md  search-architecture.md  search-operations.md  tei-backup-migration.md
haystack_rest/: __init__.py  constants.py  fields.py  filters.py  generics.py  mixins.py  query.py  serializers.py  utils.py  viewsets.py
scripts/: check_architecture_boundaries.py  convert_tif_to_jp2.py  migrate_backup_to_tei.sh  upgrade-postgres-17-to-18-local.sh
static/css/: admin.css
templates/admin/: base_site.html  index.html  search_engine_admin.html
(+151 files in other folders)
